[update] adUrl